--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^7.6.11",
+    "node-schedule": "^2.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^8.21.0",
